Fix Admin Layout Issues

--- a/core/css/admin.css
+++ b/core/css/admin.css
@@ -1,8 +1,9 @@
-body{background:#f4f4f4;margin:-30px 0 0 0;padding:0}
+body{background:#f4f4f4;margin:0;padding:0}
 .text-truncate{display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.divider{height:1px;overflow:hidden;background-color:#e0e0e0}
-#content{margin:0 10px 10px 170px}
+.divider{height:1px;overflow:hidden;background-color:#eee}
+#content{margin:-30px 20px 10px 160px}
 .login-panel{margin-top:25%}
+img.login{width:150px;margin:0 0 10px 0}
 #busy{position:fixed;bottom:5px;left:5px;display:none}
 .busy{position:absolute;top:2px;left:-32px;z-index:1000}
 .busycheck{position:absolute;top:-8px;left:-32px;z-index:1000}
@@ -12,14 +13,14 @@ body{background:#f4f4f4;margin:-30px 0 0 0;padding:0}
 .input-group-addon#file,
 .input-group-addon#thumb{padding:0}
 #covertop{position:relative;height:340px}
-#coverimg{position:relative;background-color:#ddd;height:300px;margin-bottom:30px;overflow:hidden;}
+#coverimg{position:relative;background-color:#ddd;height:300px;margin-bottom:30px;overflow:hidden}
 #coverimg .cover{position:absolute;top:0;left:0;right:0;bottom:auto;width:100%;margin:0;padding:0}
-#coverimg .name{position:absolute;bottom:5px;left:200px;color:#fff;}
-#covertop .avatar{position:absolute;width:160px;height:160px;left:20px;bottom:0;}
+#coverimg .name{position:absolute;bottom:5px;left:200px;color:#fff}
+#covertop .avatar{position:absolute;width:160px;height:160px;left:20px;bottom:0}
 .input-group-addon img{max-height:40px;width:30px}
 #toTop{position:fixed;top:0;left:0;z-index:2147483647;display:none;padding:5px 8px 5px 5px;-webkit-border-bottom-right-radius:20px;-moz-border-radius-bottomright:20px;border-bottom-right-radius:20px;background-color:#000;background-color:rgba(0,0,0,.5);color:#fff}
 div.clear{clear:both}
-#events-layer{position:absolute;top:-1px;right:0;z-index:100;width:65px;height:17px;text-align:right;padding-right:5px;}
+#events-layer{position:absolute;top:-1px;right:0;z-index:100;width:65px;height:17px;text-align:right;padding-right:5px}
 #events-layer .btn{padding:0}
 #events-layer .btn-xs{width:15px;height:15px}
 .thumbnail .indicator{position:absolute;top:-10px;right:-10px}
@@ -67,7 +68,7 @@ input[type=checkbox]+label{font-family:LibreICONS;color:#a94442}
 input[type=checkbox]+label::before{content:'\e644'}
 input[type=checkbox]:checked+label{font-family:LibreICONS;color:#3c763d}
 input[type=checkbox]:checked+label::before{content:'\e645'}
-.panel .panel-image{position:relative;height:120px;overflow:hidden}
+.panel .panel-image{position:relative;background-color:#ddd;height:120px;overflow:hidden}
 .panel .panel-image[data-status|=delete]{background:#d9534f}
 .panel .panel-image[data-status|=unpublished]{background:#f0ad4e}
 .panel .panel-image[data-status|=published]{background:#5cb85c}
@@ -121,9 +122,9 @@ legend.control-legend.legend-sm{font-size:.75em!important}
 .img-preview>img{max-width:100%}
 .preview-lg{width:235px;height:180px}
 .timeline-icon{position:absolute;top:0;right:0}
-.nav-side-menu{overflow:auto;font-size:12px;font-weight:200;background-color:#f8f8f8;position:fixed;top:0;width:150px;height:100%;color:#000;border-right:1px solid #ccc}
+.nav-side-menu{overflow:auto;font-size:12px;font-weight:200;background-color:#f8f8f8;position:fixed;top:0;width:140px;height:100%;color:#000;border-right:1px solid #ccc}
 .nav-side-menu footer{position:absolute;bottom:0}
-.nav-side-menu footer li{float:right;padding:0 22px}
+.nav-side-menu footer li{float:right;padding:0 27px 0 0}
 .nav-side-menu .brand{position:relative;background-color:transparent;line-height:50px;display:block;text-align:center;font-size:14px}
 .nav-side-menu .brand img{width:90%}
 .nav-side-menu .toggle-btn{display:none}
@@ -149,8 +150,9 @@ legend.control-legend.legend-sm{font-size:.75em!important}
 .profile{margin:10px}
 .profile-sidebar li{text-align:left}
 .profile-userpic img{float:left;margin-top:-15px;width:40%;height:40%;-webkit-border-radius:50%!important;-moz-border-radius:50%!important;border-radius:50%!important}
+.profile-userpic img.img-thumbnail{padding:1px}
 .profile-usertitle{text-align:right;margin-top:0}
-.profile-usertitle-name{color:#5a7391;font-size:12px;font-weight:600}
-.profile-usertitle-job{text-transform:uppercase;color:#5b9bd1;font-size:9px;font-weight:600}
+.profile-usertitle-name{color:#5a7391;font-size:10px;font-weight:700}
+.profile-usertitle-job{text-transform:uppercase;color:#5b9bd1;font-size:8px;font-weight:600}
 .profile-useractions{text-align:right}
 .profile-useractions a{color:#777}
